[metadata]
name = all_packages
version = attr: all_packages.version.__version__
url = https://github.com/adang1345/all_packages
author = Aohan Dang
author_email = adang1345@gmail.com
classifiers =
    License :: OSI Approved :: MIT License
license = MIT
description = Install every package on PyPI
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = all_packages
python_requires = >= 3.6

[options.entry_points]
console_scripts =
    all_packages = all_packages.__main__:main
